[gd_scene load_steps=5 format=2]

[ext_resource path="res://models/bosses/boss2.glb" type="PackedScene" id=1]
[ext_resource path="res://scenes/entities/lasers/LaserGun.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/entities/bosses/Trishot.gd" type="Script" id=3]

[sub_resource type="ConcavePolygonShape" id=1]
data = PoolVector3Array( 2.1442, 0.1713, 1.434, 3.6851, 0.1713, -1.1444, 2.1442, 0.1713, -1.136, 2.1442, 0.1713, 1.434, 3.6851, 0.1713, 1.434, 3.6851, 0.1713, -1.1444, 3.6851, 0.1713, -1.1444, 1.6, 0.1713, -2.0961, 2.1442, 0.1713, -1.136, 1.6, 0.1713, -2.0961, 3.0245, 0.1713, -2.3081, 1.7028, 0.1713, -2.3081, 1.6, 0.1713, -2.0961, 3.6851, 0.1713, -1.1444, 3.0245, 0.1713, -2.3081, 2.0969, -0.2287, 1.6905, 3.8091, -0.2287, -1.1744, 3.8091, -0.2287, 1.6905, 2.0969, -0.2287, 1.6905, 2.0969, -0.2287, -1.1649, 3.8091, -0.2287, -1.1744, 1.4922, -0.2287, -2.2318, 3.8091, -0.2287, -1.1744, 2.0969, -0.2287, -1.1649, 3.8091, -0.2287, -1.1744, 1.6065, -0.2287, -2.4674, 3.0751, -0.2287, -2.4674, 3.8091, -0.2287, -1.1744, 1.4922, -0.2287, -2.2318, 1.6065, -0.2287, -2.4674, 1.6, 0.1713, -2.0961, 2.0969, -0.2287, -1.1649, 2.1442, 0.1713, -1.136, 1.6, 0.1713, -2.0961, 1.4922, -0.2287, -2.2318, 2.0969, -0.2287, -1.1649, 3.6851, 0.1713, 1.434, 3.8091, -0.2287, -1.1744, 3.6851, 0.1713, -1.1444, 3.6851, 0.1713, 1.434, 3.8091, -0.2287, 1.6905, 3.8091, -0.2287, -1.1744, 3.8091, -0.2287, 1.6905, 2.5154, -0.1827, 1.5422, 2.0969, -0.2287, 1.6905, 3.8091, -0.2287, 1.6905, 3.3714, -0.1827, 1.5422, 2.5154, -0.1827, 1.5422, 3.0245, 0.1713, -2.3081, 1.6065, -0.2287, -2.4674, 1.7028, 0.1713, -2.3081, 3.0245, 0.1713, -2.3081, 3.0751, -0.2287, -2.4674, 1.6065, -0.2287, -2.4674, 2.1442, 0.1713, -1.136, 2.0969, -0.2287, 1.6905, 2.1442, 0.1713, 1.434, 2.1442, 0.1713, -1.136, 2.0969, -0.2287, -1.1649, 2.0969, -0.2287, 1.6905, 3.6851, 0.1713, -1.1444, 3.0751, -0.2287, -2.4674, 3.0245, 0.1713, -2.3081, 3.6851, 0.1713, -1.1444, 3.8091, -0.2287, -1.1744, 3.0751, -0.2287, -2.4674, 1.7028, 0.1713, -2.3081, 1.4922, -0.2287, -2.2318, 1.6, 0.1713, -2.0961, 1.7028, 0.1713, -2.3081, 1.6065, -0.2287, -2.4674, 1.4922, -0.2287, -2.2318, 2.0969, -0.2287, 1.6905, 2.539, 0.0173, 1.4139, 2.1442, 0.1713, 1.434, 2.0969, -0.2287, 1.6905, 2.5154, -0.1827, 1.5422, 2.539, 0.0173, 1.4139, 2.1442, 0.1713, 1.434, 3.3095, 0.0173, 1.4139, 3.6851, 0.1713, 1.434, 2.1442, 0.1713, 1.434, 2.539, 0.0173, 1.4139, 3.3095, 0.0173, 1.4139, 3.6851, 0.1713, 1.434, 3.3714, -0.1827, 1.5422, 3.8091, -0.2287, 1.6905, 3.6851, 0.1713, 1.434, 3.3095, 0.0173, 1.4139, 3.3714, -0.1827, 1.5422, -1.0947, -0.1819, 1.9307, -0.5912, 0.0048, 1.695, -0.9853, 0.1181, 1.7419, -1.0947, -0.1819, 1.9307, -0.6568, -0.1752, 1.8083, -0.5912, 0.0048, 1.695, 1.0947, -0.1819, 1.9307, -0.6568, -0.1752, 1.8083, -1.0947, -0.1819, 1.9307, 1.0947, -0.1819, 1.9307, 0.6568, -0.1752, 1.8083, -0.6568, -0.1752, 1.8083, -0.9853, 0.1181, 1.7419, 0.5912, 0.0048, 1.695, 0.9853, 0.1181, 1.7419, -0.9853, 0.1181, 1.7419, -0.5912, 0.0048, 1.695, 0.5912, 0.0048, 1.695, 0.9853, 0.1181, 1.7419, 0.6568, -0.1752, 1.8083, 1.0947, -0.1819, 1.9307, 0.9853, 0.1181, 1.7419, 0.5912, 0.0048, 1.695, 0.6568, -0.1752, 1.8083, -2.1442, 0.1713, 1.434, -3.6851, 0.1713, -1.1444, -2.1442, 0.1713, -1.136, -2.1442, 0.1713, 1.434, -3.6851, 0.1713, 1.434, -3.6851, 0.1713, -1.1444, -3.6851, 0.1713, -1.1444, -1.6, 0.1713, -2.0961, -2.1442, 0.1713, -1.136, -1.6, 0.1713, -2.0961, -3.0245, 0.1713, -2.3081, -1.7028, 0.1713, -2.3081, -1.6, 0.1713, -2.0961, -3.6851, 0.1713, -1.1444, -3.0245, 0.1713, -2.3081, -2.0969, -0.2287, 1.6905, -3.8091, -0.2287, -1.1744, -3.8091, -0.2287, 1.6905, -2.0969, -0.2287, 1.6905, -2.0969, -0.2287, -1.1649, -3.8091, -0.2287, -1.1744, -1.4922, -0.2287, -2.2318, -3.8091, -0.2287, -1.1744, -2.0969, -0.2287, -1.1649, -3.8091, -0.2287, -1.1744, -1.6065, -0.2287, -2.4674, -3.0751, -0.2287, -2.4674, -3.8091, -0.2287, -1.1744, -1.4922, -0.2287, -2.2318, -1.6065, -0.2287, -2.4674, -1.6, 0.1713, -2.0961, -2.0969, -0.2287, -1.1649, -2.1442, 0.1713, -1.136, -1.6, 0.1713, -2.0961, -1.4922, -0.2287, -2.2318, -2.0969, -0.2287, -1.1649, -3.6851, 0.1713, 1.434, -3.8091, -0.2287, -1.1744, -3.6851, 0.1713, -1.1444, -3.6851, 0.1713, 1.434, -3.8091, -0.2287, 1.6905, -3.8091, -0.2287, -1.1744, -3.8091, -0.2287, 1.6905, -2.5154, -0.1827, 1.5422, -2.0969, -0.2287, 1.6905, -3.8091, -0.2287, 1.6905, -3.3714, -0.1827, 1.5422, -2.5154, -0.1827, 1.5422, -3.0245, 0.1713, -2.3081, -1.6065, -0.2287, -2.4674, -1.7028, 0.1713, -2.3081, -3.0245, 0.1713, -2.3081, -3.0751, -0.2287, -2.4674, -1.6065, -0.2287, -2.4674, -2.1442, 0.1713, -1.136, -2.0969, -0.2287, 1.6905, -2.1442, 0.1713, 1.434, -2.1442, 0.1713, -1.136, -2.0969, -0.2287, -1.1649, -2.0969, -0.2287, 1.6905, -3.6851, 0.1713, -1.1444, -3.0751, -0.2287, -2.4674, -3.0245, 0.1713, -2.3081, -3.6851, 0.1713, -1.1444, -3.8091, -0.2287, -1.1744, -3.0751, -0.2287, -2.4674, -1.7028, 0.1713, -2.3081, -1.4922, -0.2287, -2.2318, -1.6, 0.1713, -2.0961, -1.7028, 0.1713, -2.3081, -1.6065, -0.2287, -2.4674, -1.4922, -0.2287, -2.2318, -2.0969, -0.2287, 1.6905, -2.539, 0.0173, 1.4139, -2.1442, 0.1713, 1.434, -2.0969, -0.2287, 1.6905, -2.5154, -0.1827, 1.5422, -2.539, 0.0173, 1.4139, -2.1442, 0.1713, 1.434, -3.3095, 0.0173, 1.4139, -3.6851, 0.1713, 1.434, -2.1442, 0.1713, 1.434, -2.539, 0.0173, 1.4139, -3.3095, 0.0173, 1.4139, -3.6851, 0.1713, 1.434, -3.3714, -0.1827, 1.5422, -3.8091, -0.2287, 1.6905, -3.6851, 0.1713, 1.434, -3.3095, 0.0173, 1.4139, -3.3714, -0.1827, 1.5422, 2.539, 0.0173, 1.4139, 3.3714, -0.1827, 1.5422, 3.3095, 0.0173, 1.4139, 2.539, 0.0173, 1.4139, 2.5154, -0.1827, 1.5422, 3.3714, -0.1827, 1.5422, -0.5912, 0.0048, 1.695, 0.6568, -0.1752, 1.8083, 0.5912, 0.0048, 1.695, -0.5912, 0.0048, 1.695, -0.6568, -0.1752, 1.8083, 0.6568, -0.1752, 1.8083, -2.539, 0.0173, 1.4139, -3.3714, -0.1827, 1.5422, -3.3095, 0.0173, 1.4139, -2.539, 0.0173, 1.4139, -2.5154, -0.1827, 1.5422, -3.3714, -0.1827, 1.5422, -0.9853, 0.1181, 1.7419, -2.2307, 0.1181, -1.8876, -2.2307, 0.1181, 0.2714, -2.2307, 0.1181, -1.8876, 2.2307, 0.1181, 0.2714, 2.2307, 0.1181, -1.8876, 2.2307, 0.1181, 0.2714, -0.9853, 0.1181, 1.7419, 0.9853, 0.1181, 1.7419, -2.2307, 0.1181, -1.8876, -0.9853, 0.1181, 1.7419, 2.2307, 0.1181, 0.2714, -2.4786, -0.1819, -2.1019, -1.0947, -0.1819, 1.9307, -2.4786, -0.1819, 0.2969, -1.0947, -0.1819, 1.9307, 2.4786, -0.1819, 0.2969, 1.0947, -0.1819, 1.9307, 2.4786, -0.1819, 0.2969, -2.4786, -0.1819, -2.1019, 2.4786, -0.1819, -2.1019, -1.0947, -0.1819, 1.9307, -2.4786, -0.1819, -2.1019, 2.4786, -0.1819, 0.2969, 2.2307, 0.1181, 0.2714, 2.4786, -0.1819, -2.1019, 2.2307, 0.1181, -1.8876, 2.2307, 0.1181, 0.2714, 2.4786, -0.1819, 0.2969, 2.4786, -0.1819, -2.1019, -2.2307, 0.1181, -1.8876, -2.4786, -0.1819, 0.2969, -2.2307, 0.1181, 0.2714, -2.2307, 0.1181, -1.8876, -2.4786, -0.1819, -2.1019, -2.4786, -0.1819, 0.2969, 0.9853, 0.1181, 1.7419, 2.4786, -0.1819, 0.2969, 2.2307, 0.1181, 0.2714, 0.9853, 0.1181, 1.7419, 1.0947, -0.1819, 1.9307, 2.4786, -0.1819, 0.2969, -2.2307, 0.1181, 0.2714, -1.0947, -0.1819, 1.9307, -0.9853, 0.1181, 1.7419, -2.2307, 0.1181, 0.2714, -2.4786, -0.1819, 0.2969, -1.0947, -0.1819, 1.9307, 2.2307, 0.1181, -1.8876, -2.4786, -0.1819, -2.1019, -2.2307, 0.1181, -1.8876, 2.2307, 0.1181, -1.8876, 2.4786, -0.1819, -2.1019, -2.4786, -0.1819, -2.1019, -0.6543, 0.282, 1.3044, -1.4815, 0.282, -0.3408, -1.4815, 0.282, 0.3278, -1.4815, 0.282, -0.3408, 1.4815, 0.282, 0.3278, 1.4815, 0.282, -0.3408, 1.4815, 0.282, 0.3278, -0.6543, 0.282, 1.3044, 0.6543, 0.282, 1.3044, -1.4815, 0.282, -0.3408, -0.6543, 0.282, 1.3044, 1.4815, 0.282, 0.3278, -1.6461, 0.0827, -0.4832, -0.727, 0.0827, 1.4298, -1.6461, 0.0827, 0.3448, -0.727, 0.0827, 1.4298, 1.6461, 0.0827, 0.3448, 0.727, 0.0827, 1.4298, 1.6461, 0.0827, 0.3448, -1.6461, 0.0827, -0.4832, 1.6461, 0.0827, -0.4832, -0.727, 0.0827, 1.4298, -1.6461, 0.0827, -0.4832, 1.6461, 0.0827, 0.3448, 1.4815, 0.282, 0.3278, 1.6461, 0.0827, -0.4832, 1.4815, 0.282, -0.3408, 1.4815, 0.282, 0.3278, 1.6461, 0.0827, 0.3448, 1.6461, 0.0827, -0.4832, -1.4815, 0.282, -0.3408, -1.6461, 0.0827, 0.3448, -1.4815, 0.282, 0.3278, -1.4815, 0.282, -0.3408, -1.6461, 0.0827, -0.4832, -1.6461, 0.0827, 0.3448, 0.6543, 0.282, 1.3044, 1.6461, 0.0827, 0.3448, 1.4815, 0.282, 0.3278, 0.6543, 0.282, 1.3044, 0.727, 0.0827, 1.4298, 1.6461, 0.0827, 0.3448, -1.4815, 0.282, 0.3278, -0.727, 0.0827, 1.4298, -0.6543, 0.282, 1.3044, -1.4815, 0.282, 0.3278, -1.6461, 0.0827, 0.3448, -0.727, 0.0827, 1.4298, 1.4815, 0.282, -0.3408, -1.6461, 0.0827, -0.4832, -1.4815, 0.282, -0.3408, 1.4815, 0.282, -0.3408, 1.6461, 0.0827, -0.4832, -1.6461, 0.0827, -0.4832, 0.6543, 0.282, 1.3044, -0.727, 0.0827, 1.4298, 0.727, 0.0827, 1.4298, 0.6543, 0.282, 1.3044, -0.6543, 0.282, 1.3044, -0.727, 0.0827, 1.4298 )

[node name="Trishot" type="Area"]
script = ExtResource( 3 )

[node name="LaserTimer" type="Timer" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0.0278436, 0.159406 )
shape = SubResource( 1 )

[node name="Boss" parent="." instance=ExtResource( 1 )]

[node name="Cannon1" parent="Boss" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.75, 0, 1.3 )
show_cannon = false

[node name="Cannon2" parent="Boss" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.75, 0, 1.3 )
show_cannon = false

[node name="Cannon3" parent="Boss" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5 )
show_cannon = false

[connection signal="timeout" from="LaserTimer" to="." method="_on_LaserTimer_timeout"]
